Am adaugat mai multe jocuri si html/css validator

--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
     <head>
         <title>GaMa</title>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="Images/download.png" />
-        <link rel="stylesheet" type="text/css" href="GaMaCSS.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="/gitGaMa/images/download.png" />
+        <link rel="stylesheet" type="text/css" href="/gitGaMa/GaMaCSS.css">
         <!--Am folosit acest site pentru a folosi anumite simboluri, fonturi.-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </head>
     <body >
+
         <!-- Bara de meniu, de aici incepe -->
         <div class="topbar">
             <div class="container" >
+
                 <!-- Partea din stanga-->
                 <div class="topleft">
                     <ul>
                         <li> <i class="fas fa-globe-europe"></i> EN </li>
                         <!--In acest mod ma folosesc de simbolurile specifice, prin intermediul tagului <i>-->
-                    </ul>
-                </div>
-                <!-- Centru -->
-                <div class="topcenter">
-                    <ul>
-                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="#" button class="aboutViewBtn"><i class="fas fa-users"></i> About Us</a></li>
+
                     </ul>
                 </div>
 
-                <!-- Partea din dreapta -->
-                <div class="topright">
-                <!-- Partea din dreapta-->
-                <!--<div class="topright">
+                <!-- Centru -->
+                <div class="topcenter">
                     <ul>
-                        <li>Need help? <i class="fas fa-phone"></i> 0720 XXX YYY</li>
-                        <!--<li><a href="#"><i class="fas fa-user"></i> Me <i class="far fa-caret-square-down"></i></a>
-                        </li>-->
-                    </ul>
+                        <li><a href="index.php"><i class="fas fa-home"></i> Home</a></li>
+                      </ul>
                 </div>
-                </div>-->
             </div>
         </div>
 
@@ -45,47 +37,49 @@
     <div class="header">
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="Images/download.png" width="60" alt=""></a>
+                <a href="index.php"><img src="/gitGaMa/images/download.png" width="80" alt=""></a>
             </div>
 
             <div class="headerright">
                 <ul>
-                    <li><a href="#"><i class="fas fa-shopping-bag"></i> My Bag</a></li>
-                    <li><a href="#"><i class="fas fa-chess"></i> My Tournaments</a></li>
-                    <li><a href="#" class="signBtn"><i class="fas fa-user-circle"></i> Login/Register</a></li>
+                            <li><a>You just logged out!</a></li>
+                            <li><a>You are not logged!</a></li>
+                    <li><a href="/gitGaMa/loginSIregister/login.html" class="signBtn"><i class="fas fa-user-circle"></i> Login</a></li>
+                    <li><a href="/gitGaMa/loginSIregister/register.html" class="registerBtn"><i class="fas fa-user-circle"></i> Register</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <!-- Aici se termina header-ul-->
 
-    <!-- Sectiunea cu categoriile de jocuri-->
 
-    <div class="gameGenres">
+    <!-- Honorable games -->
+    <div class="honorableMentions">
             <div class="container">
-                <h3>GAME GENRES - DIGITAL</h3>
+                <!-- <h3 style="color:RED;">YOU HAVE TO BE LOGGED, IN ORDER TO JOIN</H3> -->
+                <h3>STRATEGY - BOARD GAMES</h3>
                     <ul>
-                      <li><a href="#">STRATEGY <i class="fas fa-male"></i><i class="fas fa-baby"></i></a></li>
-                      <li><a href="#">PUZZLE <i class="fas fa-male"></i> <i class="fas fa-blind"></i><i class="fas fa-baby"></i></i></a></li>
-                      <li><a href="#">SIMULATION <i class="fas fa-male"></i></a></li>
-                      <li><a href="#">SHOOTER <i class="fas fa-male"></i></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/GoT.png" alt="GoT"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/gWho.png" alt="gWho"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/BoIboard.png" alt="BoI"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/monopoly.png" alt="mono"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/pandemic.png" alt="Pandemic"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/qCubes.png" alt="qCubes"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/domino.png" alt="domino"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/chessKid.png" alt="chessKid"></a></li>
+
                     </ul>
             </div>
         </div>
 
-    <!-- END of sectiune categ. jocuri -->
-
-    <!-- Aici se termina product -->
-    <!-- Honorable games -->
-
     <div class="honorableMentions">
             <div class="container">
-                <h3>HONORABLE GAMES</h3>
+                <h3>PUZZLE - DIGITAL</h3>
                     <ul>
-                      <li><a href="#"><img src="Images/StarCraft_box.png" alt="StarCraft"></a></li>
-                      <li><a href="#"><img src="Images/Diablo_box.png" alt="Diablo"></a></li>
-                      <li><a href="#"><img src="Images/BoI_box.png" alt="BoI"></a></li>
-                      <li><a href="#"><img src="Images/RedAlert2_box.png" alt="RedAlert2"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/go.png" alt="go"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/labyrinth.png" alt="Labyrinth"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/Solitaire.png" alt="Solitaire"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/Hearthstone.png" alt="BoI"></a></li>
+                      <li><a href=""><img src="/gitGaMa/images/RedAlert2.png" alt="RedAlert2"></a></li>
                     </ul>
             </div>
         </div>
@@ -97,9 +91,9 @@
             <div class="container">
               <h3>OUR PARTNERS</h3>
                     <ul>
-                      <li><a href="https://www.info.uaic.ro/"><img src="Images/FIIsponsor2.png" alt="FII"></a></li>
-                      <li><a href="https://www.bancatransilvania.ro"><img src="Images/BTsponsor.jpg" alt="BT"></a></li>
-                      <li><a href="https://www.amazon.com"><img src="Images/AmazonSponsor.png" alt="Amazon"></a></li>
+                      <li><a href="https://www.info.uaic.ro/"><img src="/gitGaMa/images/FIIsponsor2.png" alt="FII"></a></li>
+                      <li><a href="https://www.bancatransilvania.ro"><img src="/gitGaMa//images/BTsponsor.jpg" alt="BT"></a></li>
+                      <li><a href="https://www.amazon.com"><img src="/gitGaMa/images/AmazonSponsor.png" alt="Amazon"></a></li>
                     </ul>
             </div>
         </div>
@@ -109,13 +103,21 @@
     <div class="footer">
         <div class="container">
             <div class="col-3">
-                <p><strong>Where you can find us:</strong><br>Iasi, Str. Aioanesei Adrian, Nr. 666</p>
+                <p><strong>Where you can find us:</strong><br>Iasi, Str. Ioanesei Adrian, Nr. 666</p>
+                <a href="/gitGaMa/RSSfeed.php"><img src="/gitGaMa/images/rss_icon.png" width="20" height="20"></a>
             </div>
         </div>
     </div>
+
     <div class="copyright">
         <div class="container">
-            <h5>&copy; 2021 GaMa | Created by Macrescu Cosmin-Ionut & Prodan Nicoale-Roger</h5>
+            <h5>&copy; 2021 GaMa | Created by Macrescu Cosmin-Ionut & Prodan Nicolae-Roger</h5>
+            <p><a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+                </a>
+            </p>
         </div>
     </div>
 
