Am rezolva o eroare de la html validator

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="col-3">
                 <p><strong>Where you can find us:</strong><br>Iasi, Str. Ioanesei Adrian, Nr. 666</p>
-                <a href="/gitGaMa/RSSfeed.php"><img src="/gitGaMa/images/rss_icon.png" width="20" height="20"></a>
+                <a href=""><img src="/gitGaMa/images/rss_icon.png" width="20" height="20" alt="RSS"></a>
             </div>
         </div>
     </div>
