--- a/Scholarly/index.html
+++ b/Scholarly/index.html
@@ -146,9 +146,9 @@
       </section>
 
       <section id="whoDidWhat">
-        <h3>What we are gonna do:(Not 100% definitive)</h3>
-    <li><b>Macrescu Cosmin-Ionut</b> will do the register part, the system for users to be able to join tourneys, a ranked system, the commands(move player, remove player, change points) for the admin's administration page and last but not least the statistics interface.</li>
-    <li><b>Prodan Nicolae-Roger</b> will do the login and logout parts, the tourneys, the export to CSV of tourneys/stats function.</li>
+        <h3>What we did/ will do:(Not 100% definitive for back-end)</h3>
+    <li><b>Macrescu Cosmin-Ionut</b> For interface: index.html (the main page), login.html and register.html. Back-end: will do the register part, the system for users to be able to join tourneys, the commands(move player, remove player, change points) for the admin's administration page and the statistics.</li>
+    <li><b>Prodan Nicolae-Roger</b> For interface: gameTourney.html (there is no bracket display at the moment, but it will be in the final implementation), administrationPage.html. Back-end: will do the login and logout parts, the tourneys brackets, the export to CSV of tourneys/stats function.</li>
       </section>
 
         <section id="conclusion">
