--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 <!-- <h3 style="color:RED;">YOU HAVE TO BE LOGGED, IN ORDER TO JOIN</H3> -->
                 <h3>STRATEGY - BOARD GAMES</h3>
                     <ul>
-                      <li><a href=""><img src="/gitGaMa/images/GoT.png" alt="GoT"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/gWho.png" alt="gWho"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/BoIboard.png" alt="BoI"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/monopoly.png" alt="mono"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/pandemic.png" alt="Pandemic"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/qCubes.png" alt="qCubes"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/domino.png" alt="domino"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/chessKid.png" alt="chessKid"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/GoT.png" alt="GoT"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/gWho.png" alt="gWho"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/BoIboard.png" alt="BoI"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/monopoly.png" alt="mono"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/pandemic.png" alt="Pandemic"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/qCubes.png" alt="qCubes"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/domino.png" alt="domino"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/chessKid.png" alt="chessKid"></a></li>
 
                     </ul>
             </div>
@@ -75,11 +75,11 @@
             <div class="container">
                 <h3>PUZZLE - DIGITAL</h3>
                     <ul>
-                      <li><a href=""><img src="/gitGaMa/images/go.png" alt="go"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/labyrinth.png" alt="Labyrinth"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/Solitaire.png" alt="Solitaire"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/Hearthstone.png" alt="BoI"></a></li>
-                      <li><a href=""><img src="/gitGaMa/images/RedAlert2.png" alt="RedAlert2"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/go.png" alt="go"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/labyrinth.png" alt="Labyrinth"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/Solitaire.png" alt="Solitaire"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/Hearthstone.png" alt="BoI"></a></li>
+                      <li><a href="/gitGaMa/gamesCategory/gameTourney.html"><img src="/gitGaMa/images/RedAlert2.png" alt="RedAlert2"></a></li>
                     </ul>
             </div>
         </div>
