--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- Centru -->
                 <div class="topcenter">
                     <ul>
-                        <li><a href="index.php"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="/gitGaMa/index.html"><i class="fas fa-home"></i> Home</a></li>
                       </ul>
                 </div>
             </div>
