--- a/adminPages/administrationPage.html
+++ b/adminPages/administrationPage.html
@@ -20,7 +20,7 @@
  <div class="header">
   <div class="container">
      <div class="logo">
-         <a href="/gitGaMa/adminPages/mainPage.php"><img src="/gitGaMa/images/download.png" width="80" alt=""></a>
+         <a href="/gitGaMa/index.html"><img src="/gitGaMa/images/download.png" width="80" alt=""></a>
      </div>
      <div class="headerright">
             <ul>
