--- a/Scholarly/index.html
+++ b/Scholarly/index.html
@@ -108,6 +108,7 @@
           to users as follows:
         </p>
         <ul>
+		<li>/index</li>
           <li>
             /login
           </li>
@@ -118,8 +119,7 @@
 			<ul>
 			Tournament list
 				<ul>
-          <li>/joinTourney</li>
-          <li>/exportCSV</li>
+          <li>/gameTourney</li>
 				</ul>
 			</li>
 			<li>/logout</li>
