--- a/Scholarly/index.html
+++ b/Scholarly/index.html
@@ -58,7 +58,7 @@
     <section typeof="sa:Abstract" id="abstract" role="doc-abstract">
       <h2>Abstract</h2>
       <p>
-        GaMa is a website that is desired for people all around the glob that wants to play different types of video games, easy and fast without
+        GaMa is a website that is desired for people all around the glob that wants to play different types of games, easy and fast without
 		any sophisticated steps and last but not least, the registered clients will be able to register in tournaments for specific games.
       </p>
     </section>
@@ -66,17 +66,16 @@
       <!-- review? -->
       <h2>Introduction</h2>
       <p>
-		As we all know, these days, the video games are gainning more and more popularity. Back in the day, people had to go in the shops
-          in order to buy the video game that they wanted. That means they had to wait for the game to be in the shop, to see if that certain game is in stock
-          and so on.
-		That's why the GaMa website is useful, by using it people can buy their game instantly, receiving a virtual copy of it, without waiting.
+		As we all know, these days, the video games are gainning more and more popularity. Back in the day, people had to go in certain places to play games,
+	      but now the technology has advanced and we can do that from our computer and that's why the GaMa website is useful!
       </p>
       <p>
         The purpose of this website is to:
       </p>
       <ul>
         <li>Make it easy to play diffrent games with people all around the glob by joining tourneys.</li>
-        <li>Easy to choose.</li>
+	<li>All games are for different ranges of ages!</li>
+        <li>Easy to choose the game.</li>
         <li>Easy to use</li>
 	<li>See all of your tournaments in one place. </li>
       </ul>
@@ -117,7 +116,7 @@
           </li>
         </ul>
 			<ul>
-			Tournament list
+			Games list (DIGITAL/BOARD)
 				<ul>
           <li>/gameTourney</li>
 				</ul>
